--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-vertical-timeline-component": "^3.3.6",
+    "axios": "^1.6.4",
+    "framer-motion": "^10.16.16",
+    "mongoose": "^8.0.3",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
