--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-router": "^5.1.20",
     "@types/react-vertical-timeline-component": "^3.3.6",
-    "axios": "^1.6.4",
     "framer-motion": "^10.16.16",
     "mongoose": "^8.0.3",
     "next": "14.0.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^11.0.5"
   },
