--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-router": "^5.1.20",
-    "@types/react-vertical-timeline-component": "^3.3.6",
     "framer-motion": "^10.16.16",
-    "mongoose": "^8.0.3",
+    "i18next": "^23.10.0",
+    "mongoose": "^8.2.0",
     "next": "14.0.1",
+    "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^14.0.5",
     "react-icons": "^4.12.0",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
-    "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
