--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.49.2",
     "react-i18next": "^14.0.5",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.22.2",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "swiper": "^11.0.5"
