--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-router": "^5.1.20",
     "framer-motion": "^10.16.16",
     "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "mongoose": "^8.2.0",
     "next": "14.0.1",
     "next-i18next": "^15.2.0",
