--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.2",
     "react-simple-typewriter": "^5.0.1",
+    "react-socks": "^2.2.0",
     "react-toastify": "^9.1.3",
     "swiper": "^11.0.5"
   },
