--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
+    "mongodb": "^2.2.36",
     "mongoose": "^8.2.0",
     "next": "14.0.1",
     "next-i18next": "^15.2.0",
