--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-router": "^5.1.20",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^11.0.20",
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
     "mongodb": "^2.2.36",
     "mongoose": "^8.2.0",
-    "next": "14.0.1",
+    "next": "^14.0.1",
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -31,7 +31,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-socks": "^2.2.0",
     "react-toastify": "^9.1.3",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
