--- a/package.json
+++ b/package.json
@@ -13,34 +13,35 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-router": "^5.1.20",
-    "framer-motion": "^10.16.16",
-    "i18next": "^23.10.0",
-    "i18next-browser-languagedetector": "^7.2.0",
+    "bson": "^6.5.0",
+    "framer-motion": "^11.0.24",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
-    "mongodb": "^2.2.36",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "next": "14.0.1",
+    "next": "^14.1.4",
     "next-i18next": "^15.2.0",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
-    "react-i18next": "^14.0.5",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.22.2",
+    "react-i18next": "^14.1.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-simple-typewriter": "^5.0.1",
     "react-socks": "^2.2.0",
-    "react-toastify": "^9.1.3",
-    "swiper": "^11.0.5"
+    "react-toastify": "^10.0.5",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8",
-    "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "^3.3.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
